# sharedLLM

./: .gitignore  README.md  dev.sh  requirements.txt  start-openwebui.sh  start.sh
.github/workflows/: rust.yml  webpack.yml
backend/: Cargo.toml
backend/migrations/: 0001_initial.sql  0002_fix_timestamps.sql  0003_distributed.sql  0004_unique_device_ip.sql
backend/src/: main.rs
backend/src/api/: agent.rs  backends.rs  cluster.rs  devices.rs  gpu.rs  install.rs  mod.rs  models.rs  permissions.rs  settings.rs  ws_handler.rs
backend/src/db/: mod.rs  models.rs  queries.rs
backend/src/discovery/: mod.rs
backend/src/llama_cpp/: mod.rs
backend/src/memory/: amd.rs  apple.rs  intel.rs  mod.rs  nvidia.rs  system_ram.rs
backend/src/ollama/: mod.rs
backend/src/permissions/: mod.rs
backend/src/ws/: mod.rs
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: ApprovalToast.tsx  DeviceCard.tsx  MemoryBar.tsx  RoleEditor.tsx  Sidebar.tsx
frontend/src/hooks/: useDevices.ts  useMemory.ts  useWebSocket.ts
frontend/src/lib/: api.ts
frontend/src/pages/: Agent.tsx  Chat.tsx  Dashboard.tsx  Devices.tsx  Inference.tsx  Models.tsx  Permissions.tsx  Settings.tsx
frontend/src/types/: index.ts
