[package]
name = "shared-memory-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws", "multipart"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
hyper = { version = "1.0", features = ["full"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
futures-util = "0.3"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "migrate", "uuid", "chrono"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# IDs and time
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Network / mDNS
mdns-sd = "0.11"
local-ip-address = "0.6"

# System info (cross-platform RAM + CPU)
sysinfo = "0.30"

# HTTP client (for Ollama proxy + health checks)
reqwest = { version = "0.12", features = ["json", "stream"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Process management
which = "6"

# Archive extraction (for llama.cpp binary installer)
zip = "2"
tar = "0.4"
flate2 = "1"

# Hostname detection
hostname = "0.4"

[profile.release]
opt-level = 3
lto = true
